--- a/src/webview/styles/index.css
+++ b/src/webview/styles/index.css
@@ -19,7 +19,7 @@
 	}
 
 	body {
-		overflow-y: scroll;
+		/* overflow-y: scroll; */
 	}
 
 	html {
